// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu/> should render correctly for moderator 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame accent-color__backlog-blue"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <ul
            class="header-menu"
          >
            <li
              class="board-settings"
            >
              <form>
                <input
                  class="board-settings__board-name"
                  disabled=""
                  placeholder="scrumlr.io"
                  value="test-board-name"
                />
                <button
                  class="board-settings__edit-button"
                  type="submit"
                >
                  edit
                </button>
              </form>
            </li>
            <li
              class="board-option"
              data-testid="author"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--right"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Show authors of notes
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="note"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--right"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Show notes of other users
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="column"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--left"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Show hidden columns for me
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="editing-board"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--right"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Allow changes on the board
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="allSettings"
            >
              <a
                class="board-option-link"
                href="/settings"
              >
                <p
                  class="board-option-link__label"
                >
                  Show all board settings
                </p>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<HeaderMenu/> should render correctly for participants 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame accent-color__backlog-blue"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <ul
            class="header-menu"
          >
            <li
              class="board-settings"
            >
              <form>
                <input
                  class="board-settings__board-name"
                  disabled=""
                  placeholder="scrumlr.io"
                  value="test-board-name"
                />
              </form>
            </li>
            <li
              class="board-option"
              data-testid="allSettings"
            >
              <a
                class="board-option-link"
                href="/settings"
              >
                <p
                  class="board-option-link__label"
                >
                  Show all board settings
                </p>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;
